[package]
name = "moisture-sensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
embedded-hal = "1.0.0"
embedded-hal-mock = "0.10.0"
linux-embedded-hal = {version = "0.4.0", features = ["i2c"], optional = true}

[features]
default = ["off-target"]
on-target = ["dep:linux-embedded-hal"]
off-target = ["dep:rand"]

[[bin]]
name = "main"
path = "src/main.rs"
required-features = ["on-target"]
